# tai

./: Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  macros.rs  main.rs  md.rs
src/tabs/: prompt.rs  settings.rs
