[package]
name = "tai"
version = "0.1.0"
description = "Terminal UI for AI interfaces"
authors = ["EDToaster <howard3061@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.47.0", features = ["full"] }
color-eyre = "0.6.3"
openai = "1.1.0"
tui-textarea = "0.7.0"
tui-widget-list = "0.13.2"
tui-markdown = "0.3.5"
indoc = "2.0.6"
tree-sitter-md = { version = "0.3.2", features = ["parser"] }
tree-sitter = "0.23.2"
